Show "Zoom in to see more" control on map #109

--- a/app/js/localization/localizations.json
+++ b/app/js/localization/localizations.json
@@ -255,6 +255,10 @@
       "es": "Introducir Tipo de Fuente"
     },
     {
+      "en": "Zoom in to see more",
+      "es": "Zoom para ver más"
+    },
+    {
       "en": "Enter optional name",
       "es": "Introduzca nombre opcional"
     },
